# open-the-chests

./: .gitignore  BoxEventEnv.py  LICENSE  LICENSE.txt  README.md  SECURITY.md  TODO.md  analyse.py  deconstruct_model.py  demo.py  globals.py  licenses.txt  main.py  monitor.csv  pattern_test.py  pyproject.toml  reqirements.txt  requirements.txt  testing.py  third_parties_licenses.txt
Dynamics/: Context.py  Environment.py  GUI.py  Parser.py  utils.py
Elements/: Event.py  InteractiveBox.py  Pattern.py
config/: config.yaml  noise_two_per_box.yaml  one_distinct_per_box.yaml  one_per_box.yaml
config/multiple_per_box/: A.yaml
config/multiple_per_box_isolate/: A.yaml  B.yaml  C.yaml
config/noise_one_per_box/: A.yaml  B.yaml  C.yaml  D.yaml  E.yaml
config/one_distinct_per_box/: B.yaml
config/one_per_box/: B.yaml  C.yaml  D.yaml  E.yaml
config/patterns/: complex.cm  complex.yaml  similar_simple.yaml  simple.cm  simple.yaml
configs/: multiple_per_box_isolate.yaml
configs/multiple_per_box/: B.yaml
configs/one_per_box/: D.yaml
docs/examples/: element_usage.py  parser_gui_usage.py
examples/: create_env.py  create_event.py  element_usage.py  instructions.py  parser_gui_usage.py  parser_usage.py
examples/create_env/: create_base_env.py  create_gym_env.py  env_info.py
excog_experiments/: Process.py  Script.py  config.yaml  final_config.yaml  monitor.csv
excog_experiments/data/: multiple_per_box.yaml  noise_two_per_box.yaml  one_distinct_per_box.yaml  one_per_box.yaml
mygym/: BoxEventEnv.py
old/: config.yaml  pattern_test.py  simple.yaml
openthechests/: demo.py  main.py  testing.py
openthechests/env/: GUI.py  OpenTheChests.py  OpenTheChestsGym.py
openthechests/examples/: element_usage.py  parser_gui_usage.py
openthechests/models/: dqn_model.py  ppo_model.py
openthechests/scripts/: deconstruct_model.py  visualise_train_curves.py  visualise_validation.py
openthechests/src/: BoxEventEnv.py  OpenTheChests.py  OpenTheChestsGym.py
openthechests/tests/: testing.py  testing_elements.py  testing_env.py
patterns/: complex.cm  simple.cm
scripts/: analyse.py  deconstruct_model.py  train_models.sh  visualise_excog.py  visualise_train.py  visualise_train_curves.py
src/: BoxEventEnv.py
src/env/: Environment.py  GUI.py  Parser.py
src/openthechests/: demo.py  globals.py  main.py  testing.py
src/outdated/: complex.cm  complex.yaml
utils/: EventSpace.py  EventTuple.py  allen.py  old_parse.py  utils.py
(+294 files in other folders)
